# ROSe-read-only-security

./: .gitignore  .gitleaks.toml  Dockerfile.shadow  QUICKSTART.md  README.md  SETUP_COMPLETE.md  demo_ai_analyst.py  docker-compose.shadow.yml  docker-compose.yml  requirements.txt  setup-env.ps1
.githooks/: pre-commit  pre-commit.ps1
.hypothesis/constants/: 004e722d2b39195a  02361c7d2d1bf455  03a0bc33c3be41ac  041b82baf95116f0  041f421b76112557  055c6411036374f4  0570a7c52cd987f9  07475514dc0bbadb  07b8446a052edf99  09482feeaa124f43  09a5a8787da428e0  09ae28b390a241d0  0af9c9a739202b6b  0b242a4a768117e8  0c81e2f83b59deea  0d64ef357c94737d  11a4fb9bf042a054  12c833c09846f981  13efa0910df75e7a  146ce438f76c65d3  1711dca7bbb78b0f  1890bff4302b6c9d  199b9cbb069ffd97  1a3d35eebc762ec0  1d5f8cbcbf0b8849  1f4b62403fde35c2  219385b4acf67710  2196e604560785f8  224445af19a2a647  22aee50d81961c02  23de3c8efc283fa6  2438213548c974ab  261044bda6979f15  29975c1f77feae9e  2a8dcc58b6556886  2abcee14b6389c5a  2c45fe94abf341ab  2daa4930a82b1059  2dc96d827d0453b1  2f95c8527aa42db7  (+171 more)
.hypothesis/examples/04e6b3400353b141/: 20ecd930632d4310  2613cdcadcd17fdd  46e6617978b9dc03  47a205b889dc1cd8  4c55fd93a3e390ef  4cd3a50fd254d249  537842ef2ed7bc9b  79dddc3a63989fcb  7ab8a06cb50b91ad  8a1e4bf2c47629d0  a3c79739552f82a0  ab02fb8e7f3b13bc  ac2f37257618723c  d02a49c74b131688  dc59252c63c79e29  f0330131b1633847
.hypothesis/examples/20ecd930632d4310/: 03a115ab702c0bce  092e0e893745889a  0cc52d609f48ba01  0dc9b95a5bc419b3  1048be09ddb8cd5e  137949ed21d32be8  1685ea3abb3e9ae9  175defb80872b576  1ab8d4fb3c16fe26  (+37 more)
config/oss/: .gitkeep  prometheus-shadow.yml  prometheus.yml
data/analysis/: .gitkeep
data/synthetic/: __init__.py  generator.py
docs/: AWS_SETUP_GUIDE.md
docs/setup/: .gitkeep  README.md
scripts/: aws-setup.ps1  generate-synthetic-data.ps1  setup-athena.py  setup-git-hooks.ps1  setup-platform.ps1  shadow-controller.py  test-athena.py  validate-aws-setup.py
src/cpp/performance_analyzer/: CMakeLists.txt  README.md  main.cpp  oss_security_analyzer.cpp  oss_security_analyzer.h  run_property_test.bat  run_property_test.ps1  run_unit_tests.bat  test_performance_analysis_properties.cpp  test_unit_analyzer.cpp
tests/integration/: test_analysis_dashboard.py  test_unified_analysis_platform.py  test_use_case_demo_integration.py  test_use_case_demo_simple.py  test_workflow_orchestrator.py
tests/unit/: test_access_analysis_properties.py  test_data_intelligence_properties.py  test_data_protection_properties.py  test_dependency_analysis_properties.py  test_documentation_completeness_properties.py  test_reliability_intelligence_properties.py  test_repository_analysis_properties.py  test_sdd_compliance_properties.py  test_security_analysis_properties.py  test_shadow_mode_properties.py  test_technology_compliance_properties.py
(+2430 files in other folders)
